update package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web-loader",
-  "version": "1.0.0",
+  "name": "@yuanliwei/web-loader",
+  "version": "1.0.1",
   "description": "load javascript or css files in browser by javascript",
   "main": "index.js",
   "scripts": {
